<resources>
    <string name="app_name">פסטיבל אייקון</string>
    <string name="programme_title">תוכנייה</string>
    <string name="my_events_title">האירועים שלי</string>
    <string name="programme_search_title">חיפוש אירועים</string>
    <string name="icon_kids_title">אייקון Kids</string>
    <string name="event_added_to_favorites">האירוע התווסף לאירועים שלי</string>
    <string name="event_added_to_favorites_but_conflicts">האירוע התווסף לאירועים שלי אך הוא מתנגש עם אירוע אחר ברשימה</string>
    <string name="event_conflicts_with_one_question">האירוע מתנגש עם האירוע: %s מרשימת האירועים שלך.</string>
    <string name="event_conflicts_with_several_question">האירוע מתנגש עם %d אירועים אחרים ברשימת האירועים שלך.</string>
    <string name="event_removed_from_favorites">האירוע הוסר מהאירועים שלי</string>
    <string name="cancel">בטל</string>
    <string name="arrival_methods_marker_name">%s - אשכול פיס</string>
    <string name="event_navigate_to_map">הצג במפה</string>
    <string name="event_navigate_to_hall">הצג אולם</string>
    <string name="event_add_to_favorites">הוסף לאירועים שלי</string>
    <string name="event_remove_from_favorites">הסר מהאירועים שלי</string>
    <string name="event_configure_notifications">הגדר תזכורות</string>
    <string name="update_show_full_text">הצג עדכון מלא</string>
    <string name="update_refresh_failed">לא ניתן לעדכן. בדוק חיבור לאינטרנט</string>
    <string name="update_not_logged_in">כדי לצפות בעדכונים יש להתחבר לפייסבוק</string>
    <string name="update_login_error">לא ניתן להתחבר לפייסבוק. בדוק חיבור לאינטרנט</string>
    <string name="my_events_no_data">הוסף אירוע לאירועים שלי ע\"י לחיצה על הכוכב בדף האירוע או ברשימת האירועים, או ע\"י יבוא מאתר אייקון</string>
    <string name="my_events_share">שתף</string>
    <string name="my_event_share_title">התוכנייה שלי ל%s:</string>
    <string name="my_event_share_signature">נוצר באפליקצית %s.</string>
    <string name="my_event_share_link">http://play.google.com/store/apps/details?id=sff.org.conventions</string>
    <string name="my_event_share_chooser_dialog_title">שתף את רשימת האירועים</string>
    <string name="select_hour_ok">הצג שעה</string>
    <string name="question_enjoyment">האם נהנית באירוע?</string>
    <string name="question_lecturer_quality">ההנחיה באירוע היתה:</string>
    <string name="question_similar_events">האם תרצה לבוא לאירועים בנושאים דומים בעתיד?</string>
    <string name="question_additional_info">עוד משהו?</string>
    <string name="event_has_ended">האירוע נגמר</string>
    <string name="add_feedback">מלא פידבק</string>
    <string name="feedback">פידבק</string>
    <string name="hide">הסתר</string>
    <string name="send">שלח</string>
    <string name="back">חזור</string>
    <string name="event_feedback_mail_title">מייל אוטומטי - פידבק ל%s עבור האירוע</string>
    <string name="convention_feedback_mail_title">מייל אוטומטי - פידבק לפסטיבל %s</string>
    <string name="feedback_send_failed">לא ניתן לשלוח את הפידבק. נסה שנית מאוחר יותר</string>
    <string name="feedback_sent">הפידבק נשלח. תודה!</string>
    <string name="feedback_sending_time_over">זמן שליחת הפידבק הסתיים</string>
    <string name="search_input_search_keyword">הקלד את חיפושך…</string>
    <string name="search_no_results_found">לא נמצאו תוצאות</string>
    <string name="no_events_found">לא נמצאו אירועים</string>
    <string name="search_filter">סינון</string>
    <string name="search_filter_by_event_type">סוג האירוע</string>
    <string name="search_filter_by_category">רצועות תוכן</string>
    <string name="search_filter_by_tag">תגיות</string>
    <string name="search_filter_select_all">בחר הכל</string>
    <string name="search_filter_clear_all">נקה הכל</string>
    <string name="notification_event_about_to_start_title">אירוע עומד להתחיל</string>
    <string name="notification_event_about_to_start_message_format">האירוע %1$s עומד להתחיל באולם %2$s</string>
    <string name="notification_event_ended_title">עזרו לנו להשתפר</string>
    <string name="notification_event_ended_message_format">נהנת באירוע %s? שלח פידבק למארגני האירוע</string>
    <string name="notification_2_events_ended_message_format">נהנת באירוע %s ובאירוע נוסף אחד? שלח פידבק למארגנים</string>
    <string name="notification_several_events_ended_message_format">נהנת באירוע %1$s וב-%2$d אירועים נוספים? שלח פידבק למארגנים</string>
    <string name="notification_feedback_ended_message">%s הסתיים, ואנחנו רוצים לשמוע את דעתך</string>
    <string name="notification_feedback_last_chance_title">הזדמנות אחרונה להשפיע</string>
    <string name="notification_feedback_last_chance_message">נהניתם ב%s? נשארו רק עוד 3 ימים למלא פידבק!</string>
    <string name="configure_notification_event_about_to_start_message">שלח תזכורת לפני תחילת האירוע</string>
    <string name="configure_notification_event_feedback_reminder_message">שלח תזכורת למלא פידבק אחרי שהאירוע מסתיים</string>
    <string name="configure_notification_time">%d דקות</string>
    <string name="missing_play_services_dialog_title">לא נמצא Google play services</string>
    <string name="missing_play_services_dialog_message">על מנת לקבל התראות במהלך הפסטיבל ולצפות בדרכי הגעה, יש להתקין או לעדכן את Google play services ולוודא שהשירות פעיל</string>
    <string name="missing_play_services_ok_button">התקן</string>
    <string name="missing_play_services_cancel_button">אל תתקין</string>
    <string name="missing_play_services_neutral_button">לא עכשיו</string>
    <string name="missing_play_services_map_message">על מנת לצפות במפת דרכי ההגעה יש להתקין או לעדכן את Google play services ולוודא שהשירות פעיל</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="floor_down">קומה למטה</string>
    <string name="floor_up">קומה למעלה</string>
    <string name="navigate">ניווט</string>
    <string name="display_feedback">הצג פידבק</string>
    <string name="display">הצג</string>
    <string name="enlarge_map">הגדל</string>
    <string name="shrink_map">הקטן</string>
    <string name="no_navigation_activity">לא נמצאה אפליקציה מתאימה לניווט</string>
    <string name="share_no_events">הוסף אירועים כדי לשתף</string>
    <string name="ok">אישור</string>
    <string name="events_without_feedback_title">מלא פידבק על אירועים</string>
    <string name="events_feedback_no_events">בחר אירועים שהיית בהם דרך התוכנייה ומלא עליהם פידבק.</string>
    <string name="events_with_feedback_title">פידבק שמילאת על אירועים</string>
    <string name="convention_feedback_title">פידבק על הפסטיבל</string>
    <string name="convention_feedback_subtitle">מלא פידבק כללי על הפסטיבל - קופות, יריד הדוכנים, הפונדק, אוהל המשחקים וכל דבר אחר.</string>
    <string name="question_liked">באיזו מידה נהנית מהפסטיבל?</string>
    <string name="question_improvement">הצעות לשיפור ונושאים לשימור</string>
    <string name="question_age">גיל</string>
    <string name="age_less_than_12">פחות מ-12</string>
    <string name="age_12_to_17">12–17</string>
    <string name="age_18_to_25">18–25</string>
    <string name="age_more_than_25">25+</string>
    <string name="send_all_explanation_no_events">ניתן לשלוח פידבק שמילאת על אירועים ולא שלחת ע\"י לחיצה על \"שלח הכל\".</string>
    <string name="send_all_explanation_with_1_event">יש אירוע אחד שעבורו מילאת פידבק ולא שלחת. ניתן לשלוח את הפידבק שמילאת ע\"י לחיצה על \"שלח הכל\".</string>
    <string name="send_all_explanation_with_events">יש %d אירועים שעבורם מילאת פידבק ולא שלחת. ניתן לשלוח את הפידבק שמילאת ע\"י לחיצה על \"שלח הכל\".</string>
    <string name="send_all">שלח הכל</string>
    <string name="new_updates">יש %d עדכונים חדשים</string>
    <string name="new_update">יש עדכון חדש</string>
    <string name="cannot_set_past_alarm">לא ניתן לקבוע תזכורת בעבר</string>
    <string name="close">סגור</string>
    <string name="other">אחר</string>
    <string name="discounts_content" formatted="false">"<![CDATA[
					<h2>מועדון ההנחות של יריד הדוכנים בפסטיבל אייקון</h2>
מגוון דוכנים יעניקו 10% הנחה למציגים כרטיס חבר תקף במועדון העמותה למשחקי תפקידים בישראל ובאגודה ישראלית למדע בדיוני ולפנטסיה. הדוכנים המשתתפים במבצע:
<p><strong>מו&#8221;ח &#8211; משחקים וחושבים, פריק, לימור שטרן תכשיטים, הממלכה, שושנה טלר, קסניה נזרוב, תעתועים &#8211; קעקועים זמניים, אבירי השולחן העגול, פוגי קומיקס, Molly&#8217;s Mugs, חגילר קומיקס, אוקיינוס הוצאה לאור, Colors of Life &#8211; דוכן ציורי פנים, טל ונועה חרוזים, Jen Schu Art, גיק בסטה, אסתי &#8211; איפור קסום ציורי פנים וגוף, Aurore22, Hatz, Lolita and More, The Enchanted Wool, Amelia Hats, Fedoraharp Lacquer, מאי שירי דיזיין וארט, נגה ציורים ואומנות, ComiXunity, Orr&#8217;s Art, סמארט זון, Dor20 Studios, סתיו ארועטי, תומר פוסטרים, Crow&#8217;s Treasure, Eilafashion, תומיקס קומיקס, קומיקאזה, קומיקס וירוקתו, כריות פנדומים, אנימה סטור, אנימה ווייב, דוכן התרומות של שיפודן ישראל, זבנג, מריונטה, אובנטו ועוד בתוך הקופסה, גיימינג לנד, יורי שקלנקו, Roy Sherez Designs, נקסוס, הגלקסיה.</strong></p>
<p><strong> </strong></p>
<h2>חניה במחיר מסובסד</h2>
<p>חניון גבעון / TLV הממוקם ברחוב הארבעה מעניק תעריף חניה מופחת של 8 ש&#8221;ח למגיעים בין השעות 16:00 ועד 06:00 למחרת. לצורך קבלת ההטבה יש לקודד את כרטיס החנייה במכונת הקידוד הנמצאת בסמוך לכניסה הראשית לסינמטק תל-אביב ולשלם את הכרטיס במכונת התשלום (ההנחה לא תינתן בעת תשלום במחסום הממוקם ביציאה מן החניון).</p>
<p><strong> </strong></p>
<h2>הנחות במסעדות</h2>
<p>המסעדות הבאות יעניקו 10% הנחה למבקרי הפסטיבל בהצגת כרטיס לאחד מארועי הפסטיבל או תג של הפסטיבל:</p>
<h2>סודוך</h2>
קרליבך 20. כשר<br/>
<h2>BBB</h2>
הארבעה 12. לא כשר<br/>
<h2>צ׳ופ צ׳ופ</h2>
אבן גבירול 20. לא כשר<br/>
<h2>לאבורטוריו די פסטה</h2>
החשמונאים 91. כשר<br/>
<h2>אייסברג</h2>
הארבעה 4. לא כשר<br/>
]]>"</string>
    <string name="about_app_title">אודות האפליקציה</string>
    <string name="show_only_halls">הצג אולמות בלבד</string>
    <string name="notifications_preferences">התראות</string>
    <string name="show_general_notifications_title">כללי</string>
    <string name="show_general_notifications_summary">הצג התראות כלליות</string>
    <string name="show_event_notifications_title">אירועים</string>
    <string name="show_event_notifications_summary">הצג התראות על עדכונים בתוכנייה ואירועים. לקבלת התראות לאירועים ספציפים יש להוסיף אותם לרשימת האירועים שלי.</string>
    <string name="show_cosplay_notifications_title">השתתפות באירוע הקוספליי</string>
    <string name="show_cosplay_notifications_summary">הצג התראות עבור המשתתפים בתחרות הקוספליי</string>
    <string name="show_bus_notifications_title">הסעות</string>
    <string name="show_bus_notifications_summary">הצג התראות על הסעות</string>
    <string name="reminder_preferences">תזכורות</string>
    <string name="show_reminder_before_event_starts_title">לפני שאירוע מתחיל</string>
    <string name="show_reminder_before_event_starts_summary">הצג תזכורת לפני שאירוע שסימנתי מתחיל.\nניתן לשנות הגדרה זו לכל אירוע בנפרד בדף האירוע.</string>
    <string name="show_event_feedback_reminder_title">פידבק לאירוע</string>
    <string name="show_event_feedback_reminder_summary">הצג תזכורת לשליחת פידבק אחרי שאירוע שסימנתי מסתיים.\nניתן לשנות הגדרה זו לכל אירוע בנפרד בדף האירוע.</string>
    <string name="icon_kids_description">מתחם הילדים החדש של פסטיבל אייקון מתארח בסינמטק תל אביב! בכל בוקר יפעל בלובי החדש של הסינמטק מתחם הפעלות חינמי הכולל סדנת יצירה, "ממלכת קרטוניה" - מבוך בתים גמדיים מקרטון, ופינת ניסויים מדעיים.</string>
    <string name="icon_kids_tickets_info">מגוון סדנאות קולנוע לילדים וסרטים מדובבים יתקיימו באולמות הסינמטק. את הכרטיסים אליהם ניתן לרכוש באתר ובקופות הסינמטק.</string>
    <string name="icon_kids_buy_tickets">לפרטים ורכישת כרטיסים</string>
</resources>