<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="push_notifications"
        android:title="@string/notifications_preferences">
        <CheckBoxPreference
            android:key="cami2016_general"
            android:title="@string/show_general_notifications_title"
            android:summary="@string/show_general_notifications_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="cami2016_events"
            android:title="@string/show_event_notifications_title"
            android:summary="@string/show_event_notifications_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="cami2016_cosplay"
            android:title="@string/show_cosplay_notifications_title"
            android:summary="@string/show_cosplay_notifications_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="cami2016_bus"
            android:title="@string/show_bus_notifications_title"
            android:summary="@string/show_bus_notifications_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/reminder_preferences">
        <CheckBoxPreference
            android:key="cami2016_event_reminder"
            android:title="@string/show_reminder_before_event_starts_title"
            android:summary="@string/show_reminder_before_event_starts_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="cami2016_feedback_reminder"
            android:title="@string/show_event_feedback_reminder_title"
            android:summary="@string/show_event_feedback_reminder_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>