<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="amai.org.conventions.events.activities.EventActivity"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/event_change_favorite_state"
        android:title="@string/event_add_to_favorites"
        android:icon="@drawable/star_with_plus"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/event_navigate_to_map"
        android:title="@string/event_navigate_to_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item
        android:id="@+id/event_configure_notifications"
        android:title="@string/event_configure_notifications"
        android:orderInCategory="3"
        app:showAsAction="never"/>

    <item
        android:id="@+id/event_navigate_to_hall"
        android:title="@string/event_navigate_to_hall"
        android:orderInCategory="4"
        app:showAsAction="never"/>

</menu>