<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <amai.org.conventions.customviews.AspectRatioImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_kids"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_kids_description"
            android:textAlignment="center"
            android:layout_margin="12dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_kids_tickets_info"
            android:textAlignment="center"
            android:layout_margin="12dp"
            android:textSize="16sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_kids_buy_tickets"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            style="@style/HighlightedButton"
            android:onClick="onBuyTicketsClicked"/>
    </LinearLayout>


</RelativeLayout>