<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        tools:context="amai.org.conventions.FeedbackActivity">
    <LinearLayout
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/events_without_feedback"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textDirection="rtl"
                android:text="@string/events_without_feedback_title"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:textDirection="rtl"
                    android:id="@+id/feedback_no_events_text"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/events_feedback_no_events"/>
                <amai.org.conventions.customviews.NestedListView
                    android:id="@+id/events_without_feedback_list"
                    android:divider="@null"
                    android:dividerHeight="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </amai.org.conventions.customviews.NestedListView>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/events_with_sent_feedback"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textDirection="rtl"
                android:text="@string/events_with_feedback_title"/>
            <amai.org.conventions.customviews.NestedListView
                android:id="@+id/events_with_sent_feedback_list"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </amai.org.conventions.customviews.NestedListView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textDirection="rtl"
            android:text="@string/convention_feedback_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:textDirection="rtl"
            android:text="@string/convention_feedback_subtitle"/>

        <amai.org.conventions.events.CollapsibleFeedbackView
            android:id="@+id/convention_feedback_view"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
