<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feedback_expended"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/feedback_expanded_title"
        android:onClick="closeFeedback"
        android:paddingStart="@dimen/event_details_box_padding"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/feedback_layout_title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/feedback" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/BorderlessButton"
                android:textColor="?feedbackButtonColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:onClick="closeFeedback"
                android:paddingEnd="@dimen/event_details_box_padding"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/event_details_box_padding"
                android:text="@string/hide" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/questions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/event_details_box_padding" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/event_details_box_padding"
        android:layout_marginStart="@dimen/event_details_box_padding"
        android:layout_marginTop="@dimen/event_details_box_padding"
        android:background="@color/transparent_black" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/send_feedback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HighlightedButton"
            android:enabled="false"
            android:text="@string/send" />

        <!-- this progress bar gets un-hidden in runtime when the button is clicked -->
        <ProgressBar
            android:id="@+id/feedback_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <!-- This text view is displayed when the feedback cannot be sent -->
        <TextView
            android:id="@+id/feedback_sent_text"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/feedback_sent"
            android:visibility="gone" />

    </FrameLayout>

    <TextView
        android:id="@+id/additional_feedback_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone" />
</LinearLayout>
