<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="amai.org.conventions.map.MapActivity">

    <amai.org.conventions.customviews.ConditionalSwipeVerticalViewPager
        android:id="@+id/map_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- This layout is the full width and height of the screen so that we can
         catch clicks anywhere to dismiss the search. -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map_search"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="220dp"
            android:background="?mapSearchResultsBackground"
            android:id="@+id/map_search_pane"
            android:elevation="?mapSearchPaneElevation"
            android:layout_height="match_parent">

            <View
                android:id="@+id/map_search_top_border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?mapSearchTopBorder"/>

            <LinearLayout
                android:orientation="vertical"
                android:background="?mapSearchFiltersBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="?mapSearchBarHorizontalMargins"
                    android:layout_marginEnd="?mapSearchBarHorizontalMargins"
                    android:theme="?mapSearchTheme">
                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/map_search_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:queryHint="@string/search_input_search_keyword" />
                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?mapSearchText"
                    app:buttonTint="?mapSearchCheckboxTint"
                    android:paddingBottom="5dp"
                    android:id="@+id/map_search_show_only_halls"
                    android:text="@string/show_only_halls"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?mapSearchText"
                    app:buttonTint="?mapSearchCheckboxTint"
                    android:paddingBottom="5dp"
                    android:id="@+id/map_search_show_only_stands_areas"
                    android:text="@string/show_only_stands_areas"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?mapSearchSeparator"/>

            <ListView
                android:id="@+id/map_search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:divider="?mapSearchResultsDivider"
                android:dividerHeight="?mapSearchResultsDividerHeight">

            </ListView>

            <TextView
                android:id="@+id/map_search_no_results_found"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|top"
                android:visibility="gone"
                android:textSize="@dimen/text_size_medium_material"
                android:textColor="?hintTextColor"
                android:padding="5dp"
                android:text="@string/search_no_results_found"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?mapSearchBorder"/>
    </LinearLayout>


</FrameLayout>
